bindings/rgml.h

/**
 * [Matrix<T, 4, 4>] backed by [f64]
 */
typedef struct Matrix_f64__4__4 dmat4_t;
/**
 * [Vector<T, 4>] backed by [f64]
 */
typedef struct Vector_f64__4 dvec4_t;
/**
 * [Vector<T, 3>] backed by [f64]
 */
typedef struct Vector_f64__3 dvec3_t;
/**
 * [Vector<T, 2>] backed by [f64]
 */
typedef struct Vector_f64__2 Vector2F64;
/**
 * [Matrix<T, 4, 4>] backed by [f32]
 */
typedef struct Matrix_f32__4__4 mat4_t;
/**
 * [Vector<T, 4>] backed by [f32]
 */
typedef struct Vector_f32__4 vec4_t;
/**
 * [Vector<T, 3>] backed by [f32]
 */
typedef struct Vector_f32__3 vec3_t;
dmat4_t dmat4_default(void);
dmat4_t dmat4_identity(void);
dmat4_t dmat4_inverse(dmat4_t i);
dmat4_t dmat4_mul(dmat4_t lhs, dmat4_t rhs);
dvec4_t dmat4_mul_vec4(dmat4_t lhs, dvec4_t rhs);
dmat4_t dmat4_perspective(double fov_y, double aspect, double z_near, double z_far);
dmat4_t dmat4_rotate_x(double degrees);
dmat4_t dmat4_rotate_y(double degrees);
dmat4_t dmat4_rotate_z(double degrees);
dmat4_t dmat4_rotation(dvec3_t euler);
dmat4_t dmat4_translation(dvec3_t vector);
dmat4_t dmat4_transpose(dmat4_t i);
dvec3_t dvec3_abs(dvec3_t i);
dvec3_t dvec3_add(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_ceil(dvec3_t i);
dvec3_t dvec3_cos(dvec3_t i);
dvec3_t dvec3_cross(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_default(void);
dvec3_t dvec3_div(dvec3_t lhs, dvec3_t rhs);
double dvec3_dot(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_floor(dvec3_t i);
dvec3_t dvec3_fract(dvec3_t i);
dvec3_t dvec3_from_vec2(Vector2F64 i);
dvec3_t dvec3_from_vec4(dvec4_t i);
dvec3_t dvec3_lerp(dvec3_t from, dvec3_t to, double alpha);
double dvec3_magnitude(dvec3_t i);
double dvec3_magnitude_sqr(dvec3_t i);
dvec3_t dvec3_max(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_min(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_mul(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_new(double x, double y, double z);
dvec3_t dvec3_normalize(dvec3_t i);
dvec3_t dvec3_pow(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_reflect(dvec3_t lhs, dvec3_t rhs);
dvec3_t dvec3_round(dvec3_t i);
dvec3_t dvec3_saturate(dvec3_t i);
dvec3_t dvec3_scalar(double x);
dvec3_t dvec3_sign(dvec3_t i);
dvec3_t dvec3_sin(dvec3_t i);
dvec3_t dvec3_sqrt(dvec3_t i);
dvec3_t dvec3_sub(dvec3_t lhs, dvec3_t rhs);
double dvec3_sum(dvec3_t i);
dvec3_t dvec3_tan(dvec3_t i);
dvec4_t dvec4_abs(dvec4_t i);
dvec4_t dvec4_add(dvec4_t lhs, dvec4_t rhs);
dvec4_t dvec4_ceil(dvec4_t i);
dvec4_t dvec4_cos(dvec4_t i);
dvec4_t dvec4_default(void);
dvec4_t dvec4_div(dvec4_t lhs, dvec4_t rhs);
double dvec4_dot(dvec4_t lhs, dvec4_t rhs);
dvec4_t dvec4_floor(dvec4_t i);
dvec4_t dvec4_fract(dvec4_t i);
dvec4_t dvec4_from_vec2(Vector2F64 i);
dvec4_t dvec4_from_vec3(dvec3_t i);
dvec4_t dvec4_identity(void);
dvec4_t dvec4_lerp(dvec4_t from, dvec4_t to, double alpha);
double dvec4_magnitude(dvec4_t i);
double dvec4_magnitude_sqr(dvec4_t i);
dvec4_t dvec4_max(dvec4_t lhs, dvec4_t rhs);
dvec4_t dvec4_min(dvec4_t lhs, dvec4_t rhs);
dvec4_t dvec4_mul(dvec4_t lhs, dvec4_t rhs);
dvec4_t dvec4_mul_mat4(dvec4_t lhs, dmat4_t rhs);
dvec4_t dvec4_new(double x, double y, double z, double w);
dvec4_t dvec4_normalize(dvec4_t i);
dvec4_t dvec4_pow(dvec4_t lhs, dvec4_t rhs);
dvec4_t dvec4_round(dvec4_t i);
dvec4_t dvec4_saturate(dvec4_t i);
dvec4_t dvec4_scalar(double x);
dvec4_t dvec4_sign(dvec4_t i);
dvec4_t dvec4_sin(dvec4_t i);
dvec4_t dvec4_sqrt(dvec4_t i);
dvec4_t dvec4_sub(dvec4_t lhs, dvec4_t rhs);
double dvec4_sum(dvec4_t i);
dvec4_t dvec4_tan(dvec4_t i);
mat4_t mat4_default(void);
mat4_t mat4_identity(void);
mat4_t mat4_inverse(mat4_t i);
mat4_t mat4_mul(mat4_t lhs, mat4_t rhs);
vec4_t mat4_mul_vec4(mat4_t lhs, vec4_t rhs);
mat4_t mat4_perspective(float fov_y, float aspect, float z_near, float z_far);
mat4_t mat4_rotate_x(float degrees);
mat4_t mat4_rotate_y(float degrees);
mat4_t mat4_rotate_z(float degrees);
mat4_t mat4_rotation(vec3_t euler);
mat4_t mat4_translation(vec3_t vector);
mat4_t mat4_transpose(mat4_t i);