bindings/dotnet/Internal.cs


		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public DVector3 Add(DVector3 rhs) => Vector3F64.dvec3_add(this, rhs);
		public DVector3 Sub(DVector3 rhs) => Vector3F64.dvec3_sub(this, rhs);
		public DVector3 Mul(DVector3 rhs) => Vector3F64.dvec3_mul(this, rhs);
		public DVector3 Div(DVector3 rhs) => Vector3F64.dvec3_div(this, rhs);
		public DVector3 Normalize() => Vector3F64.dvec3_normalize(this);
		public DVector3 Abs() => Vector3F64.dvec3_abs(this);
		public DVector3 Floor() => Vector3F64.dvec3_floor(this);
		public DVector3 Ceil() => Vector3F64.dvec3_ceil(this);
		public DVector3 Round() => Vector3F64.dvec3_round(this);
		public DVector3 Saturate() => Vector3F64.dvec3_saturate(this);
		public DVector3 Sqrt() => Vector3F64.dvec3_sqrt(this);
		public DVector3 Sin() => Vector3F64.dvec3_sin(this);
		public DVector3 Cos() => Vector3F64.dvec3_cos(this);
		public DVector3 Tan() => Vector3F64.dvec3_tan(this);
		public DVector3 Sign() => Vector3F64.dvec3_sign(this);
		public DVector3 Fract() => Vector3F64.dvec3_fract(this);
		public double Sum() => Vector3F64.dvec3_sum(this);
		public double Magnitude() => Vector3F64.dvec3_magnitude(this);
		public double Magnitude_sqr() => Vector3F64.dvec3_magnitude_sqr(this);
		public DVector3 Min(DVector3 rhs) => Vector3F64.dvec3_min(this, rhs);
		public DVector3 Max(DVector3 rhs) => Vector3F64.dvec3_max(this, rhs);
		public DVector3 Pow(DVector3 rhs) => Vector3F64.dvec3_pow(this, rhs);
		public DVector3 Cross(DVector3 rhs) => Vector3F64.dvec3_cross(this, rhs);
		public DVector3 Reflect(DVector3 rhs) => Vector3F64.dvec3_reflect(this, rhs);
		public double Dot(DVector3 rhs) => Vector3F64.dvec3_dot(this, rhs);
		public DVector3 Lerp(DVector3 to, double alpha) => Vector3F64.dvec3_lerp(this, to, alpha);
		public DVector3 New(double x, double y, double z) => Vector3F64.dvec3_new(x, y, z);
		public DVector3 Scalar(double x) => Vector3F64.dvec3_scalar(x);
		public DVector3 Default() => Vector3F64.dvec3_default();
		public DVector3 From_vec2(DVector2 i) => Vector3F64.dvec3_from_vec2(i);
		public DVector3 From_vec4(DVector4 i) => Vector3F64.dvec3_from_vec4(i);
		*/
	}
	internal class Vector4F64 {
		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_add(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_sub(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_mul(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_div(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_mul_mat4(DVector4 lhs, DMatrix4x4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_normalize(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_abs(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_floor(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_ceil(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_round(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_saturate(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_sqrt(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_sin(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_cos(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_tan(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_sign(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_fract(DVector4 i);

		[DllImport("prism_math")]
		internal static extern double dvec4_sum(DVector4 i);

		[DllImport("prism_math")]
		internal static extern double dvec4_magnitude(DVector4 i);

		[DllImport("prism_math")]
		internal static extern double dvec4_magnitude_sqr(DVector4 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_min(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_max(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_pow(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern double dvec4_dot(DVector4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_lerp(DVector4 from, DVector4 to, double alpha);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_identity();

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_new(double x, double y, double z, double w);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_scalar(double x);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_default();

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_from_vec2(DVector2 i);

		[DllImport("prism_math")]
		internal static extern DVector4 dvec4_from_vec3(DVector3 i);

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public DVector4 Add(DVector4 rhs) => Vector4F64.dvec4_add(this, rhs);
		public DVector4 Sub(DVector4 rhs) => Vector4F64.dvec4_sub(this, rhs);
		public DVector4 Mul(DVector4 rhs) => Vector4F64.dvec4_mul(this, rhs);
		public DVector4 Div(DVector4 rhs) => Vector4F64.dvec4_div(this, rhs);
		public DVector4 Mul_mat4(DMatrix4x4 rhs) => Vector4F64.dvec4_mul_mat4(this, rhs);
		public DVector4 Normalize() => Vector4F64.dvec4_normalize(this);
		public DVector4 Abs() => Vector4F64.dvec4_abs(this);
		public DVector4 Floor() => Vector4F64.dvec4_floor(this);
		public DVector4 Ceil() => Vector4F64.dvec4_ceil(this);
		public DVector4 Round() => Vector4F64.dvec4_round(this);
		public DVector4 Saturate() => Vector4F64.dvec4_saturate(this);
		public DVector4 Sqrt() => Vector4F64.dvec4_sqrt(this);
		public DVector4 Sin() => Vector4F64.dvec4_sin(this);
		public DVector4 Cos() => Vector4F64.dvec4_cos(this);
		public DVector4 Tan() => Vector4F64.dvec4_tan(this);
		public DVector4 Sign() => Vector4F64.dvec4_sign(this);
		public DVector4 Fract() => Vector4F64.dvec4_fract(this);
		public double Sum() => Vector4F64.dvec4_sum(this);
		public double Magnitude() => Vector4F64.dvec4_magnitude(this);
		public double Magnitude_sqr() => Vector4F64.dvec4_magnitude_sqr(this);
		public DVector4 Min(DVector4 rhs) => Vector4F64.dvec4_min(this, rhs);
		public DVector4 Max(DVector4 rhs) => Vector4F64.dvec4_max(this, rhs);
		public DVector4 Pow(DVector4 rhs) => Vector4F64.dvec4_pow(this, rhs);
		public double Dot(DVector4 rhs) => Vector4F64.dvec4_dot(this, rhs);
		public DVector4 Lerp(DVector4 to, double alpha) => Vector4F64.dvec4_lerp(this, to, alpha);
		public DVector4 Identity() => Vector4F64.dvec4_identity();
		public DVector4 New(double x, double y, double z, double w) => Vector4F64.dvec4_new(x, y, z, w);
		public DVector4 Scalar(double x) => Vector4F64.dvec4_scalar(x);
		public DVector4 Default() => Vector4F64.dvec4_default();
		public DVector4 From_vec2(DVector2 i) => Vector4F64.dvec4_from_vec2(i);
		public DVector4 From_vec3(DVector3 i) => Vector4F64.dvec4_from_vec3(i);
		*/
	}
	internal class Matrix4x4F32 {
		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_mul(Matrix4x4 lhs, Matrix4x4 rhs);

		[DllImport("prism_math")]
		internal static extern Vector4 mat4_mul_vec4(Matrix4x4 lhs, Vector4 rhs);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_inverse(Matrix4x4 i);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_transpose(Matrix4x4 i);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_translation(Vector3 vector);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_rotation(Vector3 euler);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_rotate_x(float degrees);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_rotate_y(float degrees);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_rotate_z(float degrees);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_perspective(float fov_y, float aspect, float z_near, float z_far);

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_default();

		[DllImport("prism_math")]
		internal static extern Matrix4x4 mat4_identity();

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public Matrix4x4 Mul(Matrix4x4 rhs) => Matrix4x4F32.mat4_mul(this, rhs);
		public Vector4 Mul_vec4(Vector4 rhs) => Matrix4x4F32.mat4_mul_vec4(this, rhs);
		public Matrix4x4 Inverse() => Matrix4x4F32.mat4_inverse(this);
		public Matrix4x4 Transpose() => Matrix4x4F32.mat4_transpose(this);
		public Matrix4x4 Translation(Vector3 vector) => Matrix4x4F32.mat4_translation(vector);
		public Matrix4x4 Rotation(Vector3 euler) => Matrix4x4F32.mat4_rotation(euler);
		public Matrix4x4 Rotate_x(float degrees) => Matrix4x4F32.mat4_rotate_x(degrees);
		public Matrix4x4 Rotate_y(float degrees) => Matrix4x4F32.mat4_rotate_y(degrees);
		public Matrix4x4 Rotate_z(float degrees) => Matrix4x4F32.mat4_rotate_z(degrees);
		public Matrix4x4 Perspective(float fov_y, float aspect, float z_near, float z_far) => Matrix4x4F32.mat4_perspective(fov_y, aspect, z_near, z_far);
		public Matrix4x4 Default() => Matrix4x4F32.mat4_default();
		public Matrix4x4 Identity() => Matrix4x4F32.mat4_identity();
		*/
	}
	internal class Matrix4x4F64 {
		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_mul(DMatrix4x4 lhs, DMatrix4x4 rhs);

		[DllImport("prism_math")]
		internal static extern DVector4 dmat4_mul_vec4(DMatrix4x4 lhs, DVector4 rhs);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_inverse(DMatrix4x4 i);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_transpose(DMatrix4x4 i);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_translation(DVector3 vector);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_rotation(DVector3 euler);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_rotate_x(double degrees);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_rotate_y(double degrees);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_rotate_z(double degrees);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_perspective(double fov_y, double aspect, double z_near, double z_far);

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_default();

		[DllImport("prism_math")]
		internal static extern DMatrix4x4 dmat4_identity();

		// Skeleton Bindings (these are placeholders, they may need to be manually fixed)
		/*
		public DMatrix4x4 Mul(DMatrix4x4 rhs) => Matrix4x4F64.dmat4_mul(this, rhs);
		public DVector4 Mul_vec4(DVector4 rhs) => Matrix4x4F64.dmat4_mul_vec4(this, rhs);
		public DMatrix4x4 Inverse() => Matrix4x4F64.dmat4_inverse(this);
		public DMatrix4x4 Transpose() => Matrix4x4F64.dmat4_transpose(this);
		public DMatrix4x4 Translation(DVector3 vector) => Matrix4x4F64.dmat4_translation(vector);
		public DMatrix4x4 Rotation(DVector3 euler) => Matrix4x4F64.dmat4_rotation(euler);
		public DMatrix4x4 Rotate_x(double degrees) => Matrix4x4F64.dmat4_rotate_x(degrees);
		public DMatrix4x4 Rotate_y(double degrees) => Matrix4x4F64.dmat4_rotate_y(degrees);
		public DMatrix4x4 Rotate_z(double degrees) => Matrix4x4F64.dmat4_rotate_z(degrees);
		public DMatrix4x4 Perspective(double fov_y, double aspect, double z_near, double z_far) => Matrix4x4F64.dmat4_perspective(fov_y, aspect, z_near, z_far);
		public DMatrix4x4 Default() => Matrix4x4F64.dmat4_default();
		public DMatrix4x4 Identity() => Matrix4x4F64.dmat4_identity();
		*/
	}
}
